--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^5.1.0",
     "puppeteer": "^24.17.0",
     "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "multer": "^1.4.5-lts.1",
+    "csv-parser": "^3.0.0"
   }
 }
