--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "pre-work_caprae-capital",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,6 @@
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "multer": "^1.4.5-lts.1",
-    "csv-parser": "^3.0.0"
+    "xlsx": "^0.18.5"
   }
 }
